@@ -110,7 +110,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
       "Classifying Iris Flowers Using Different Classification Models"
@@ -215,7 +215,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
       "Implementing the Majority Voting Rule Ensemble Classifier"
@@ -275,22 +275,32 @@
      "input": [
       "from sklearn.base import BaseEstimator\n",
       "from sklearn.base import ClassifierMixin\n",
+      "from sklearn.base import TransformerMixin\n",
       "import numpy as np\n",
       "import operator\n",
       "\n",
-      "class EnsembleClassifier(BaseEstimator, ClassifierMixin):\n",
+      "class EnsembleClassifier(BaseEstimator, ClassifierMixin, TransformerMixin):\n",
       "    \"\"\" \n",
       "    Ensemble classifier for scikit-learn estimators.\n",
       "        \n",
       "    Parameters\n",
       "    ----------\n",
-      "    \n",
-      "    clf : `iterable`\n",
+      "    clfs : array-like, shape = [n_classifiers]\n",
       "      A list of scikit-learn classifier objects.\n",
-      "    weights : `list` (default: `None`)\n",
-      "      If `None`, the majority rule voting will be applied to the predicted class labels.\n",
-      "        If a list of weights (`float` or `int`) is provided, the averaged raw probabilities (via `predict_proba`)\n",
-      "        will be used to determine the most confident class label.\n",
+      "      \n",
+      "    weights : array-like, shape = [n_classifiers], optional (default=`None`)\n",
+      "      If `None`, the majority rule voting will be applied to the predicted \n",
+      "      class labels. If a list of weights (`float` or `int`) is provided, \n",
+      "      the averaged raw probabilities (via `predict_proba`) will be used to \n",
+      "      determine the most confident class label.\n",
+      "        \n",
+      "    Attributes\n",
+      "    ----------\n",
+      "    classes_ : array-like, shape = [n_class_labels, n_classifiers]\n",
+      "        Class labels predicted by each classifier if `weights=None`.\n",
+      "       \n",
+      "    probas_ : array, shape = [n_probabilities, n_classifiers]\n",
+      "        Predicted probabilities by each classifier if `weights=array-like`.\n",
       "      \n",
       "    \"\"\"\n",
       "    def __init__(self, clfs, weights=None):\n",
@@ -299,70 +309,108 @@
       "\n",
       "    def fit(self, X, y):\n",
       "        \"\"\" \n",
-      "        Fit the scikit-learn estimators.\n",
+      "        Fits the scikit-learn estimators.\n",
       "        \n",
       "        Parameters\n",
       "        ----------\n",
-      "\n",
-      "        X : numpy array, shape = [n_samples, n_features]\n",
-      "            Training data\n",
-      "        y : list or numpy array, shape = [n_samples]\n",
-      "            Class labels\n",
+      "        X : {array-like, sparse matrix}, shape = [n_samples, n_features]\n",
+      "            Training vectors, where n_samples is the number of samples and\n",
+      "            n_features is the number of features.\n",
+      "            \n",
+      "        y : array-like, shape = [n_samples]\n",
+      "            Target values.\n",
       "      \n",
+      "        Returns\n",
+      "        -------\n",
+      "        self : object\n",
+      "\n",
       "        \"\"\"\n",
       "        for clf in self.clfs:\n",
       "            clf.fit(X, y)\n",
+      "        return self\n",
       "            \n",
       "    def predict(self, X):\n",
       "        \"\"\"\n",
       "        Parameters\n",
       "        ----------\n",
-      "\n",
-      "        X : numpy array, shape = [n_samples, n_features]\n",
+      "        X : {array-like, sparse matrix}, shape = [n_samples, n_features]\n",
+      "            Training vectors, where n_samples is the number of samples and\n",
+      "            n_features is the number of features.\n",
       "        \n",
       "        Returns\n",
       "        ----------\n",
-      "        \n",
-      "        maj : list or numpy array, shape = [n_samples]\n",
-      "            Predicted class labels by majority rule\n",
+      "        maj : array-like, shape = [n_class_labels]\n",
+      "            Predicted class labels by majority rule.\n",
       "        \n",
       "        \"\"\"\n",
-      "        \n",
-      "        self.classes_ = np.asarray([clf.predict(X) for clf in self.clfs])\n",
       "        if self.weights:\n",
       "            avg = self.predict_proba(X)\n",
-      "\n",
       "            maj = np.apply_along_axis(lambda x: max(enumerate(x), key=operator.itemgetter(1))[0], axis=1, arr=avg)\n",
       "        \n",
       "        else:\n",
-      "            maj = np.asarray([np.argmax(np.bincount(self.classes_[:,c])) for c in range(self.classes_.shape[1])])\n",
+      "            self.classes_ = self._get_classes(X)\n",
+      "            maj = np.asarray([np.argmax(np.bincount(self.classes_[:,c])) for c in range(self.classes_.shape[1])]) \n",
       "        \n",
       "        return maj\n",
       "            \n",
+      "    \n",
       "    def predict_proba(self, X):\n",
       "        \n",
       "        \"\"\"\n",
       "        Parameters\n",
       "        ----------\n",
-      "\n",
-      "        X : numpy array, shape = [n_samples, n_features]\n",
+      "        X : {array-like, sparse matrix}, shape = [n_samples, n_features]\n",
+      "            Training vectors, where n_samples is the number of samples and\n",
+      "            n_features is the number of features.\n",
       "        \n",
       "        Returns\n",
       "        ----------\n",
-      "        \n",
-      "        avg : list or numpy array, shape = [n_samples, n_probabilities]\n",
+      "        avg : array-like, shape = [n_samples, n_probabilities]\n",
       "            Weighted average probability for each class per sample.\n",
       "        \n",
       "        \"\"\"\n",
-      "        self.probas_ = [clf.predict_proba(X) for clf in self.clfs]\n",
+      "        self.probas_ = self._get_probas(X)\n",
       "        avg = np.average(self.probas_, axis=0, weights=self.weights)\n",
       "        \n",
-      "        return avg"
+      "        return avg\n",
+      "\n",
+      "  \n",
+      "    def transform(self, X):\n",
+      "        \"\"\"         \n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        X : {array-like, sparse matrix}, shape = [n_samples, n_features]\n",
+      "            Training vectors, where n_samples is the number of samples and\n",
+      "            n_features is the number of features.\n",
+      "      \n",
+      "        Returns\n",
+      "        -------\n",
+      "        If not `weights=None`:\n",
+      "          array-like = [n_classifier_results, n_class_proba, n_class]\n",
+      "            Class probabilties calculated by each classifier.\n",
+      "        \n",
+      "        Else:\n",
+      "          array-like = [n_classifier_results, n_class_label]\n",
+      "            Class labels predicted by each classifier.\n",
+      "        \n",
+      "        \"\"\"\n",
+      "        if self.weights:\n",
+      "            return self._get_probas(X)\n",
+      "        else:\n",
+      "            return self._get_classes(X)  \n",
+      "    \n",
+      "    def _get_classes(self, X):\n",
+      "        \"\"\" Collects results from clf.predict calls. \"\"\"\n",
+      "        return np.asarray([clf.predict(X) for clf in self.clfs])\n",
+      "        \n",
+      "    def _get_probas(self, X):\n",
+      "        \"\"\" Collects results from clf.predict calls. \"\"\"\n",
+      "        return np.asarray([clf.predict_proba(X) for clf in self.clfs])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -405,7 +453,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 60
     },
     {
      "cell_type": "markdown",
@@ -417,7 +465,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
       "Additional Note About the EnsembleClassifier Implementation: Class Labels vs. Probabilities"
@@ -498,7 +546,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
       "EnsembleClassifier - Tuning Weights"
@@ -808,7 +856,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
       "EnsembleClassifier - Pipelines"
@@ -922,7 +970,63 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Ensemble EnsembleClassifier"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "[[back to top](#Sections)]"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "If one `EnsembleClassifier` is not yet enough, we can also build an ensemble classifier of ensemble classifiers. Just like the other examples above, the following code is just meant to be a technical demonstration:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "eclf1 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[5,2,1])\n",
+      "eclf2 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[4,2,1])\n",
+      "eclf3 = EnsembleClassifier(clfs=[clf1, clf2, clf3], weights=[1,2,4])\n",
+      "\n",
+      "eclf = EnsembleClassifier(clfs=[eclf1, eclf2, eclf3], weights=[2,1,1])\n",
+      "\n",
+      "scores = cross_validation.cross_val_score(eclf, X, y, cv=5, scoring='accuracy')\n",
+      "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Accuracy: 0.95 (+/- 0.03) [Ensemble]\n"
+       ]
+      }
+     ],
+     "prompt_number": 73
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<br>\n",
+      "<br>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
       "Some Final Words"
